Updated api yaml
